# fastpycrc64

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
.github/: README.md
pybind/: test.py
pybind/src/: binding.cpp
